<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="core_designsystem_back">뒤로</string>
    <string name="core_designsystem_retry">다시 시도</string>
    <string name="core_designsystem_network_error_title">정보를 불러오지 못했어요</string>
    <string name="core_designsystem_network_error_description">네트워크 연결을 확인하고 다시 시도해 주세요</string>
</resources>

